[package]
name = "spectra-profiler-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
mascot-rs = {git = "https://github.com/earth-metabolome-initiative/mascot-rs"}
molecular-formulas = "0.2.0"
serde = "1.0.228"
tokio = {version = "1.52.3", features = ["macros", "rt-multi-thread"]}
