[package]
name = "spectra-profiler-rs"
version = "0.1.0"
edition = "2024"
authors = ["rpg-alex"]
description = "Rust tooling for profiling annotated MS/MS spectral datasets before machine-learning workflows"
license = "MIT"
repository = "https://github.com/rpg-alex/spectra-profiler-rs"
readme = "README.md"
keywords = ["mass-spectrometry", "metabolomics", "machine-learning", "rust"]
categories = ["science", "command-line-utilities"]

[dependencies]
csv = "1.4.0"
mascot-rs = { git = "https://github.com/earth-metabolome-initiative/mascot-rs" }
molecular-formulas = "0.1.10"
plotters = { version = "0.3", default-features = false, features = [
  "svg_backend",
] }
serde = "1.0.228"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", features = ["datasets"] }
flate2 = "1.1.9"

[lints.rust]
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"

[lints.clippy]
clone_on_copy = "forbid"
duplicated_attributes = "forbid"
uninlined_format_args = "deny"
wildcard_imports = "deny"
manual_let_else = "deny"
match_same_arms = "deny"
needless_pass_by_value = "deny"
